--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset=utf-8 />
 		<title>Company database</title>
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-		
 
 		<script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
 		<script src="//builds.emberjs.com/handlebars-1.0.0.js"></script>
-		<script src="//builds.emberjs.com/tags/v1.1.2/ember.js"></script>
+		<script src="//builds.emberjs.com/tags/v1.2.0/ember.js"></script>
 		<script src="//builds.emberjs.com/tags/v1.0.0-beta.3/ember-data.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.1.0/moment.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.1.0/moment.js"></script>
+		<script src="//builds.dockyard.com.s3.amazonaws.com/ember-validations/latest/ember-validations.js"></script>
 		<script src="/js/app.js"></script>
+		<script src="/js/store.js"></script>
 		<script src="/js/models/company.js"></script>
 		<script src="/js/router.js"></script>
 		<script src="/js/routes/companiesRoute.js"></script>
 		<script src="/js/controllers/companyController.js"></script>
 		<script src="/js/viewHelpers/formatDate.js"></script>
-		<meta charset=utf-8 />
 
 		<link rel="stylesheet" href="/css/style.css"/>
 	</head>
